--- a/Linvest/Teste de QI/qi.css
+++ b/Linvest/Teste de QI/qi.css
@@ -50,6 +50,7 @@ header {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    filter: drop-shadow(15px 5px 5px black);
 }
 h1 {
     color: #333;
