--- a/Linvest/PRINCIPAL/principal.css
+++ b/Linvest/PRINCIPAL/principal.css
@@ -459,3 +459,49 @@ header {
       transform: translate(0);
     }
   }
+  .sobre,.sobre::after {
+    padding: 20px 45px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    position: relative;
+  }
+  
+  .sobre::after {
+    --move1: inset(50% 50% 50% 50%);
+    --move2: inset(31% 0 40% 0);
+    --move3: inset(39% 0 15% 0);
+    --move4: inset(45% 0 40% 0);
+    --move5: inset(45% 0 6% 0);
+    --move6: inset(14% 0 61% 0);
+    clip-path: var(--move1);
+    content: 'SOBRE NÓS';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: block;
+  }
+  
+  .sobre:hover::after {
+    animation: glitch_4011 1s;
+    text-shadow: 10 10px 10px black;
+    animation-timing-function: steps(2, end);
+    text-shadow: -3px -3px 0px #ffffff, 3px 3px 0px #E94BE8;
+    background-color: transparent;
+    border: 3px solid rgb(255, 255, 255);
+  }
+  
+  .sobre:hover {
+    text-shadow: -1px -1px 0px #ffffff, 1px 1px 0px #E94BE8;
+  }
+  
+  .sobre:hover {
+    background-color: transparent;
+    border: 1px solid rgb(255, 255, 255);
+    box-shadow: 0px 10px 50px -10px rgb(255, 255, 255);
+  }
+  
