--- a/Linvest/Teste de QI/qi.css
+++ b/Linvest/Teste de QI/qi.css
@@ -596,3 +596,16 @@ button:hover {
   border: 1px solid rgb(255, 255, 255);
   box-shadow: 0px 10px 50px -10px rgb(255, 255, 255);
 }
+
+
+.meu-container8 {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(15px 5px 5px black);
+  width: 330px;
+  height: 570px;
+}
